# linux_ubuntu_mantic_overwrite

./: Not..txt  README.md  back.up.js  install.sh
etc/: crypttab  fstab  hostname  resolv.conf
etc/apt/: sources.list
etc/apt/sources.list.d/: alessandro-strada-ubuntu-ppa-noble.sources
etc/default/: grub
etc/grub.d/: 40_custom
etc/initramfs-tools/conf.d/: resume
etc/samba/: smb.conf
etc/sddm.conf.d/: sddm_mustafa.conf
etc/timeshift/: timeshift.json
etc/tor/: torrc
home/mustafa/: .git-credentials  .zshrc
home/mustafa/.config/: bluedevilglobalrc  bluedevilreceiverrc  dolphinrc  emaildefaults  harunarc  jukrc  kaccessrc  kactivitymanagerd-pluginsrc  kactivitymanagerd-statsrc  kactivitymanagerdrc  katerc  kcminputrc  kded_device_automounterrc  kdeglobals  kglobalshortcutsrc  khotkeysrc  kioslaverc  kolourpaintrc  konsolerc  kscreenlockerrc  ksplashrc  kwinrc  mimeapps.list  okularrc  plasma-org.kde.plasma.desktop-appletsrc  plasmanotifyrc  plasmarc  plasmashellrc  powerdevil.notifyrc  powermanagementprofilesrc  systemmonitorrc  systemsettingsrc
home/mustafa/.continue/: config.json
home/mustafa/.local/share/krunner-sources/kdebase-workspace-4.2.4-qalculate/plasma/runners/qalculator/: CMakeLists.txt  plasma-runner-qalculator.desktop  qalculatorrunner.h
home/user/: .zshrc  apply_root.sh
home/user/.config/: gtkrc  gtkrc-2.0  jukrc  kalarmrc  kalendaracrc  katerc  kcminputrc  kdeglobals  kglobalshortcutsrc  khelpcenterrc  klipperrc  konsolerc  kwinrc  mimeapps.list  okularrc  plasma-org.kde.plasma.desktop-appletsrc  plasma.emojierrc  plasmaparc  (+5 more)
(+148 files in other folders)
